Updating HTML and CSS for the index page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     </head>
     <body>
 
-        <h1>This is my first app</h1>
-
+        <h1>The cat that attacks my trash</h1>
+		<video src="img/videos/cat-video.mp4" type="video/mp4" class="cat-video" controls>
+			Your browser does not support cute trash destroyer cat videos.
+		</video>
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
 
